# rust

./: cse310_module_plan.docx  hello_world.rs  pseudo.txt  time.txt
emotion_journal/: .gitignore  Cargo.toml  README.md  cse310_module_submit (1).docx  my_journal.txt  test.txt
emotion_journal/src/: display.rs  main.rs  storage.rs
emotion_journal/src/journal/: emotion.rs  entry.rs  mod.rs
mood_web/: .gitignore  Cargo.toml  README.md  moods.csv  time.txt
mood_web/src/: lib.rs  main.rs
mood_web/src/journal/: entry.rs
mood_web/static/css/: blanket.css  index.css  list.css  style.css
mood_web/static/js/: app.js
mood_web/templates/: blanket.html.tera  index.html.tera  list.html.tera
