[package]
name = "mood_web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
webbrowser = "0.6"
actix-files = "0.6"